@@ -21,6 +21,7 @@ buildscript {
     }
 }
 
+
 plugins {
     id 'org.springframework.boot' version '2.7.14'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
@@ -38,15 +39,57 @@ repositories {
     gradlePluginPortal()
 }
 
+bootRun {
+    jvmArgs = [
+            '--add-opens=java.base/java.time=ALL-UNNAMED',
+            '--add-opens=java.base/java.io=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED',
+            '--add-opens=java.base/java.nio=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED'
+    ]
+}
+
 dependencies {
     // Spring Boot dependencies
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-
-    // SPRING SECURITY (was missing)
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+    // SPRING SECURITY (was missing)
+
+
+    implementation 'org.apache.activemq:artemis-core-client:2.19.1'
+    implementation 'org.apache.activemq:artemis-commons:2.19.1'
+    implementation 'org.apache.activemq:artemis-server:2.19.1'
+    implementation 'org.apache.activemq:artemis-jms-client:2.19.1'
+    implementation 'org.apache.activemq:artemis-journal:2.19.1'
+    implementation 'org.apache.activemq:artemis-selector:2.19.1'
+    implementation 'org.apache.activemq:artemis-jms-server:2.19.1'
+
+    implementation 'io.github.classgraph:classgraph:4.8.149'
+    implementation 'org.apache.qpid:proton-j:0.34.1'
+    implementation 'org.apache.qpid:qpid-jms-client:0.53.0'
+
+    implementation 'io.reactivex:rxjava:1.3.8'
+
+    implementation 'net.i2p.crypto:eddsa:0.3.0'
+
+    implementation 'io.netty:netty-all:4.1.77.Final'
+    implementation 'io.netty:netty-transport-native-epoll:4.1.77.Final'
+    implementation 'io.netty:netty-transport-native-kqueue:4.1.77.Final'
+
+    implementation 'org.apache.shiro:shiro-core:1.10.1'
+    implementation 'com.esotericsoftware:kryo:5.4.0'
+    implementation 'de.javakaffee:kryo-serializers:0.45'
+    implementation 'org.objenesis:objenesis:3.3'
+    implementation 'com.typesafe:config:1.4.2'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
+    implementation 'org.reflections:reflections:0.10.2'
+    implementation 'javax.validation:validation-api:2.0.1.Final'
 
     // Database
     implementation 'mysql:mysql-connector-java:8.0.33'
